--- a/background/templates/backgrounds/list.html
+++ b/background/templates/backgrounds/list.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block content %}
 <div class="content-wrapper">
   <div class="page-header">
@@ -8,12 +10,47 @@
       <ol class="breadcrumb">
         <li class="breadcrumb-item active" aria-current="page">
           <a href="{% url 'backgrounds-add' %}" type="button"
-            class="btn btn-gradient-primary btn-rounded btn-fw"><span class="mdi mdi-plus"></span> Add
+            class="btn btn-gradient-primary btn-rounded btn-fw"><span
+              class="mdi mdi-plus"></span> Add
             Background</a>
         </li>
       </ol>
     </nav>
   </div>
+
+  <!-- Step Progress Tracker -->
+  <div class="row">
+    <div class="stepper-wrapper">
+      <div class="stepper-item completed">
+        <a href="{% url 'frames' %}"
+          class="text-decoration-none text-black">
+          <div class="step-counter active">1</div>
+          <div class="step-name">Frame</div>
+        </a>
+      </div>
+      <div class="stepper-item completed">
+        <a href="{% url 'backgrounds' %}"
+          class="text-decoration-none">
+          <div class="step-counter">2</div>
+          <div class="step-name">Stylist</div>
+        </a>
+      </div>
+      <div class="stepper-item">
+        <a href="{% url 'stickers' %}" class="text-decoration-none text-black">
+          <div class="step-counter">3</div>
+          <div class="step-name">Sticker</div>
+        </a>
+      </div>
+      <div class="stepper-item">
+        <a href="{% url 'payments' %}" class="text-decoration-none text-black">
+          <div class="step-counter">4</div>
+          <div class="step-name">Payment</div>
+        </a>
+      </div>
+    </div>
+  </div>
+  <!-- Step Progress Tracker -->
+
   <div class="row">
     <div class="col-lg-12 grid-margin stretch-card">
       <div class="card">
@@ -44,12 +81,13 @@
                   <div class="row">
                     <div class="col-sm-6 text-end">
                       <a href="{% url 'backgrounds-edit' background.id %}"
-                    type="button"
-                    class="btn btn-gradient-primary btn-rounded btn-fw"><span
-                    class="mdi mdi-pencil"></span> Edit</a>
+                        type="button"
+                        class="btn btn-gradient-primary btn-rounded btn-fw"><span
+                          class="mdi mdi-pencil"></span> Edit</a>
                     </div>
                     <div class="col-sm-6 text-start">
-                      <a href="{% url 'backgrounds-delete' background.id %}" type="button"
+                      <a href="{% url 'backgrounds-delete' background.id %}"
+                        type="button"
                         class="delete-background btn btn-danger btn-rounded"><span
                           class="mdi mdi-trash-can"></span> Delete</a>
                     </div>
@@ -70,15 +108,5 @@
   </div>
 </div>
 
-<script>
-    let table = new DataTable('#backgrounds-table')
-
-    $('.delete-background').on('click', function (e) {
-      e.preventDefault()
-      if (confirm('Are you sure you want to delete this background?') == true) {
-        var url = $(this).attr('href')
-        window.location.href = url
-      }
-    })
-  </script>
+<script src="{% static 'js/main/backgrounds.js' %}" />
 {% endblock %}
