--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -190,3 +190,65 @@
 .stepper-item:last-child::after {
     content: none;
 }
+
+/** Image List **/
+.image-list-container {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    white-space: nowrap;
+}
+
+.image-list {
+    display: flex;
+    transition: transform 0.3s ease;
+}
+
+.image-list img {
+    width: 200px;
+    height: 150px;
+    margin-right: 10px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.image-container {
+    position: relative;
+    margin-right: 10px;
+}
+
+.image-container img {
+    width: 200px;
+    height: 150px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.image-title {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 5px;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+.action-buttons {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.action-buttons button {
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    margin-left: 5px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 12px;
+}
+/** Image List **/
