--- a/background/templates/backgrounds/list.html
+++ b/background/templates/backgrounds/list.html
@@ -5,15 +5,12 @@
 {% block content %}
 <div class="content-wrapper">
   <div class="page-header">
-    <h3 class="page-title">Backgrounds</h3>
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
-        <li class="breadcrumb-item active" aria-current="page">
-          <a href="{% url 'backgrounds-add' %}" type="button"
-            class="btn btn-gradient-primary btn-rounded btn-fw"><span
-              class="mdi mdi-plus"></span> Add
-            Background</a>
+        <li class="breadcrumb-item">
+          <a href="#">Setup</a>
         </li>
+        <li class="breadcrumb-item active" aria-current="page">Device 1</li>
       </ol>
     </nav>
   </div>
@@ -51,62 +48,313 @@
   </div>
   <!-- Step Progress Tracker -->
 
+  <!-- List Backgrounds -->
   <div class="row">
     <div class="col-lg-12 grid-margin stretch-card">
       <div class="card">
         <div class="card-body">
-          <h4 class="card-title">Backgrounds List</h4>
-          {% if backgrounds %}
-
-          <table id="backgrounds-table" class="table table-bordered">
-            <thead>
-              <tr>
-                <th>Title</th>
-                <th>Position</th>
-                <th>Photo</th>
-                <th>Date Created</th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody>
-
-              {% for background in backgrounds %}
-              <tr>
-                <td>{{background.title}}</td>
-                <td>{{background.position}}</td>
-                <td><img src="{{background.photo.url}}"
-                    alt="Photo Preview"></td>
-                <td>{{background.created_at}}</td>
-                <td>
-                  <div class="row">
-                    <div class="col-sm-6 text-end">
-                      <a href="{% url 'backgrounds-edit' background.id %}"
-                        type="button"
-                        class="btn btn-gradient-primary btn-rounded btn-fw"><span
-                          class="mdi mdi-pencil"></span> Edit</a>
-                    </div>
-                    <div class="col-sm-6 text-start">
-                      <a href="{% url 'backgrounds-delete' background.id %}"
-                        type="button"
-                        class="delete-background btn btn-danger btn-rounded"><span
-                          class="mdi mdi-trash-can"></span> Delete</a>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              {% endfor %}
-
-            </tbody>
-          </table>
-
-          {% else %}
-          <p class="card-description">🎉 Yay, Let setup first background!</p>
-          {% endif %}
+          <div class="float-end mb-5">
+            <a href="javascript:void(0)" type="button"
+              class="add-background btn btn-gradient-primary btn-rounded btn-fw"><span
+                class="mdi mdi-plus"></span> Add Background</a>
+          </div>
+          <div class="image-list-container">
+            <div class="api-loading spinner-border text-primary mx-auto d-none"
+              role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+            <div class="image-list image-list-background">
+            </div>
+            <div class="mt-3 text-center">
+              <button class="nav-button left">&#10094;</button>
+              <button class="nav-button right">&#10095;</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
+  <!-- List Backgrounds -->
+
+  <!-- Add background -->
+  <div class="add-background-container col-12 grid-margin stretch-card d-none">
+    <div class="card">
+      <div class="card-body">
+        <button class="btn-close float-end add-background-close"
+          type="button"></button>
+        <h4 class="card-title">Create Background</h4>
+
+        <form id="upload-background-form" method="post"
+          enctype="multipart/form-data" class="forms-sample">
+          {% csrf_token %}
+          <div class="form-group">
+            <label for="title">Title</label>
+            <input type="text" class="form-control" id="title" name="title"
+              placeholder="Title" />
+          </div>
+          <div class="form-group">
+            <label for="position">Position</label>
+            <select name="position" id="position" class="form-select"
+              aria-label="Default select example">
+              {% for p in positions %}
+              <option value="{{ p }}">{{ p }}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <div class="form-group">
+            <label>Photo</label>
+            <input class="form-control" type="file" id="photo" name="photo"
+              onchange="previewPhoto(event, 'photo_preview')" />
+            <img id="photo_preview" src="#" alt="Photo Preview"
+              style="display: none; max-width: 20%;"><br>
+          </div>
+          <div class="form-group">
+            <label>Photo (Hover)</label>
+            <input class="form-control" type="file" id="photo_hover"
+              name="photo_hover"
+              onchange="previewPhoto(event, 'photo_hover_preview')" />
+            <img id="photo_hover_preview" src="#" alt="Photo Preview"
+              style="display: none; max-width: 20%;"><br>
+          </div>
+          <div class="form-group">
+            <label>Photo <sup>Korean</sup></label>
+            <input class="form-control" type="file" id="photo_kr"
+              name="photo_kr"
+              onchange="previewPhoto(event, 'photo_kr_preview')" />
+            <img id="photo_kr_preview" src="#" alt="Photo Preview"
+              style="display: none; max-width: 20%;"><br>
+          </div>
+          <div class="form-group">
+            <label>Photo (Hover) <sup>Korean</sup></label>
+            <input class="form-control" type="file" id="photo_kr_hover"
+              name="photo_kr_hover"
+              onchange="previewPhoto(event, 'photo_kr_hover_preview')" />
+            <img id="photo_kr_hover_preview" src="#" alt="Photo Preview"
+              style="display: none; max-width: 20%;"><br>
+          </div>
+          <div class="form-group">
+            <label>Photo <sup>Vietnamese</sup></label>
+            <input class="form-control" type="file" id="photo_vn"
+              name="photo_vn"
+              onchange="previewPhoto(event, 'photo_vn_preview')" />
+            <img id="photo_vn_preview" src="#" alt="Photo Preview"
+              style="display: none; max-width: 20%;"><br>
+          </div>
+          <div class="form-group">
+            <label>Photo (Hover) <sup>Vietnamese</sup></label>
+            <input class="form-control" type="file" id="photo_vn_hover"
+              name="photo_vn_hover"
+              onchange="previewPhoto(event, 'photo_vn_hover_preview')" />
+            <img id="photo_vn_hover_preview" src="#" alt="Photo Preview"
+              style="display: none; max-width: 20%;"><br>
+          </div>
+          <div class="row d-flex justify-content-center">
+            <button type="submit"
+              class="btn btn-gradient-primary col-sm-2">Submit</button>
+            <button type="button"
+              class="btn btn-light col-sm-2 add-background-close">Close</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <!-- Add background -->
+
+  <!-- Edit background -->
+  <div class="edit-background-container col-12 grid-margin stretch-card d-none">
+    <div class="card">
+      <div class="card-body">
+        <button class="btn-close float-end cancel-edit-background"></button>
+        <h4 class="card-title">Edit Background</h4>
+        <form id="edit-background-form" method="post"
+          enctype="multipart/form-data" class="forms-sample">
+          {% csrf_token %}
+          <input type="hidden" id="background_id" name="background_id">
+          <div class="form-group">
+            <label for="title">Title</label>
+            <input type="text" class="form-control" id="background_title"
+              name="title" placeholder="Title" value />
+          </div>
+          <div class="form-group">
+            <label>Position</label>
+            <select name="position" id="background_position" class="form-select"
+              aria-label="Default select example">
+              {% for p in positions %}
+              <option value="{{ p }}">{{ p }}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <div class="form-group">
+            <label>Photo</label>
+            <input class="form-control" type="file" id="photo" name="photo"
+              onchange="previewPhoto(event, 'photo_preview')" />
+            <img id="photo_preview" src alt="Photo Preview"><br>
+          </div>
+          <div class="form-group">
+            <label>Photo (Hover)</label>
+            <input class="form-control" type="file" id="photo_hover"
+              name="photo_hover"
+              onchange="previewPhoto(event, 'photo_hover_preview')" />
+            <img id="photo_hover_preview" src alt="Photo Preview"><br>
+          </div>
+          <div class="form-group">
+            <label>Photo <sup>Korean</sup></label>
+            <input class="form-control" type="file" id="photo_kr"
+              name="photo_kr"
+              onchange="previewPhoto(event, 'photo_kr_preview')" />
+            <img id="photo_kr_preview" src alt="Photo Preview"><br>
+          </div>
+          <div class="form-group">
+            <label>Photo (Hover) <sup>Korean</sup></label>
+            <input class="form-control" type="file" id="photo_kr_hover"
+              name="photo_kr_hover"
+              onchange="previewPhoto(event, 'photo_kr_hover_preview')" />
+            <img id="photo_kr_hover_preview" src alt="Photo Preview"><br>
+          </div>
+          <div class="form-group">
+            <label>Photo <sup>Vietnamese</sup></label>
+            <input class="form-control" type="file" id="photo_vn"
+              name="photo_vn"
+              onchange="previewPhoto(event, 'photo_vn_preview')" />
+            <img id="photo_vn_preview" src alt="Photo Preview"><br>
+          </div>
+          <div class="form-group">
+            <label>Photo (Hover) <sup>Vietnamese</sup></label>
+            <input class="form-control" type="file" id="photo_vn_hover"
+              name="photo_vn_hover"
+              onchange="previewPhoto(event, 'photo_vn_hover_preview')" />
+            <img id="photo_vn_hover_preview" src alt="Photo Preview"><br>
+          </div>
+          <div class="row d-flex justify-content-center">
+            <button type="submit"
+              class="btn btn-gradient-primary col-sm-2">Submit</button>
+            <button type="button"
+              class="cancel-edit-background btn btn-light col-sm-2">Close</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <!-- Edit background -->
+
+  <!--
+    SEASONS PART HERE
+  -->
+  <!-- List Layouts -->
+  <div class="row list-layouts-container d-none">
+    <div class="col-lg-12 grid-margin stretch-card">
+      <div class="card">
+        <div class="card-body">
+          <h4 class="card-title">Layout</h4>
+          <div class="float-end mb-5">
+            <a href="javascript:void(0)" type="button"
+              class="add-layout btn btn-gradient-primary btn-rounded btn-fw"><span
+                class="mdi mdi-plus"></span> Add Layout</a>
+          </div>
+          <div class="image-list-container">
+            <div class="api-loading spinner-border text-primary mx-auto d-none"
+              role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+            <div class="image-list image-list-layouts">
+            </div>
+            <div class="mt-3 text-center">
+              <button class="nav-button left">&#10094;</button>
+              <button class="nav-button right">&#10095;</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- List Layouts -->
+
+  <!-- Add Layout -->
+  <div class="col-12 grid-margin stretch-card add-layout-container d-none">
+    <div class="card">
+      <div class="card-body">
+        <button class="btn-close float-end" type="button"></button>
+        <h4 class="card-title">Create Layout</h4>        
+        <form method="post" enctype="multipart/form-data" class="forms-sample">
+          {% csrf_token %}
+          <div class="form-group">
+            <label for="title">Title</label>
+            <input type="text" class="form-control" id="title" name="title"
+              placeholder="Title" />
+          </div>
+          <div class="form-group">
+            <label for="position">Position</label>
+            <select name="position" id="position" class="form-select"
+              aria-label="Default select example">
+              {% for p in position_list %}
+              <option value="{{ p }}">{{ p }}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="frame">Frames</label>
+            <select name="frame" id="frame" class="form-select"
+              aria-label="Default select example">
+              {% for frame in frames %}
+              <option value="{{ frame.id }}">{{ frame.title }}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="frame">Background</label>
+            <select name="background" id="background" class="form-select"
+              aria-label="Default select example">
+              {% for background in backgrounds %}
+              <option value="{{ background.id }}">{{ background.title
+                }}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <div class="form-group">
+            <label>Photo</label>
+            <input class="form-control" type="file" id="photo" name="photo"
+              onchange="previewPhoto(event, 'photo_preview')" />
+            <img class="photo_preview" id="photo_preview" src="#"
+              alt="Photo Preview" style="display: none;" /><br />
+          </div>
+          <div class="form-group">
+            <label>Photo Cover</label>
+            <input class="form-control" type="file" id="photo_cover"
+              name="photo_cover"
+              onchange="previewPhoto(event, 'photo_cover_preview')" />
+            <img class="photo_preview" id="photo_cover_preview" src="#"
+              alt="Photo Cover Preview" style="display: none;" /><br />
+          </div>
+          <div class="form-group">
+            <label>Photo Full</label>
+            <input class="form-control" type="file" id="photo_full"
+              name="photo_full"
+              onchange="previewPhoto(event, 'photo_full_preview')" />
+            <img class="photo_preview" id="photo_full_preview" src="#"
+              alt="Photo Full Preview" style="display: none;" /><br />
+          </div>
+          <div class="row d-flex justify-content-center">
+            <button type="submit"
+            class="btn btn-gradient-primary col-sm-2">Submit</button>
+            <button class="btn btn-light col-sm-2" id="cancel-add-layout" type="button">Cancel</button>          
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <!-- Add Layout -->
+
 </div>
+<!-- Toast -->
+<div class="toast-container position-fixed bottom-0 end-0 p-3">
+  <div id="liveToast" class="toast" role="alert" aria-live="assertive"
+    aria-atomic="true">
+    <div class="toast-body">
+      Background added successfully
+    </div>
+  </div>
+</div>
+<!-- Toast -->
 
 <script src="{% static 'js/main/backgrounds.js' %}" />
 {% endblock %}
