--- a/frame/templates/frames/list.html
+++ b/frame/templates/frames/list.html
@@ -27,7 +27,7 @@
         </a>
       </div>
       <div class="stepper-item">
-        <a href="{% url 'backgrounds' %}"
+        <a href="{% url 'backgrounds' %}?frame=1"
           class="text-decoration-none text-black">
           <div class="step-counter">2</div>
           <div class="step-name">Stylist</div>
